Intentar palabra con parametros

--- a/MVC/Views/Home/Index.cshtml
+++ b/MVC/Views/Home/Index.cshtml
@@ -132,7 +132,7 @@
         height: 50px;
         font-size: 24px;
         border-radius: var(--border-radius);
-        padding: 0 0 0 15px;
+        /*padding: 0 0 0 15px;*/
         text-transform: uppercase;
     }
 
